--- a/todo.txt
+++ b/todo.txt
@@ -24,5 +24,5 @@ we need excludes in "$HOME/.config/sloot"
 expanded="$(envsubst <<<"$text")"
 
 
-if not .config curl -fsSL "$GH_URL/<file name and/or path>"
+if not .config curl -fsSL https://raw.githubusercontent.com/scottmonster/sloot/refs/heads/master/setup.sh | bash
 
